Bug 407553 - [colorize mask] The progress bar is missing on the layer stack after rendering.
Summary: [colorize mask] The progress bar is missing on the layer stack after rendering.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Colorize (other bugs)
Version First Reported In: 4.2.0-alpha
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2019-05-15 09:10 UTC by David REVOY
Modified: 2019-05-17 08:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2019-05-15 09:10:18 UTC
Hi,
When asking a render to the colorize mask (icon of circling arrows on right in the layer stack), Krita 4.1x used to give a feedback to the user with a progress bar. In krita-4.2.0-alpha-ca5aeb7-x86_64.appimage (Kubuntu 18.04.1), the progress bar is missing.

To reproduce:
=============
1. Doodle a lineart, three shapes is enough (on a A4@300ppi).
2. Add → Colorize Mask (right-click on the layer stack layer)
3. Add color markers (3 colors is enough)
4. Click the icon to render the colorize mask (icon of circling arrows on right, in the layer stack)

Result:
=======
Nothing happens after click. At first, it feels like the rendering is broken. Nothing appears. Then the result appears after completion in background.

Regression:
===========
No progress bar anymore. A progress bar used to be visible in the layer stack during the rendering, appearing immediately after clicking on the rendering icon and informing user about the computation work in background.
Comment 1 Halla Rempt 2019-05-15 09:11:39 UTC
Dmitry, can you take a look?
Comment 2 Dmitry Kazakov 2019-05-16 12:58:55 UTC
Now the progress bar has been moved to the status bar. I'll try to check if I can duplicate it in the layer stack.
Comment 3 Dmitry Kazakov 2019-05-16 15:14:45 UTC
Git commit e9ce7d9f640051e721eb0921129df466e936ef73 by Dmitry Kazakov.
Committed on 16/05/2019 at 15:12.
Pushed by dkazakov into branch 'master'.

Fix drawing of progress bars in the layers docker
BACKPORT:krita/4.2

M  +7    -4    plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/kde/krita/commit/e9ce7d9f640051e721eb0921129df466e936ef73
Comment 4 Dmitry Kazakov 2019-05-16 15:14:46 UTC
Git commit fb226d07fed5961cdb93a47be3438ce11999265a by Dmitry Kazakov.
Committed on 16/05/2019 at 15:13.
Pushed by dkazakov into branch 'master'.

Fix updates of the node progress bar

We should never use raw QTimer for compressing events. Use proper
KisSignalCompressor instead.
BACKPORT:krita/4.2

M  +7    -6    libs/ui/kis_node_model.cpp

https://invent.kde.org/kde/krita/commit/fb226d07fed5961cdb93a47be3438ce11999265a
Comment 5 Halla Rempt 2019-05-17 08:13:01 UTC
Git commit e7162d244d16bc0b6546d040e24dba5782bfc72c by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 17/05/2019 at 08:12.
Pushed by rempt into branch 'krita/4.2'.

Fix drawing of progress bars in the layers docker
BACKPORT:krita/4.2

M  +7    -4    plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/kde/krita/commit/e7162d244d16bc0b6546d040e24dba5782bfc72c
Comment 6 Halla Rempt 2019-05-17 08:13:01 UTC
Git commit cdb3a1bca8c868d56b2030599597f7bb36a07f94 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 17/05/2019 at 08:12.
Pushed by rempt into branch 'krita/4.2'.

Fix updates of the node progress bar

We should never use raw QTimer for compressing events. Use proper
KisSignalCompressor instead.
BACKPORT:krita/4.2

M  +7    -6    libs/ui/kis_node_model.cpp

https://invent.kde.org/kde/krita/commit/cdb3a1bca8c868d56b2030599597f7bb36a07f94
Comment 7 David REVOY 2019-05-17 08:56:03 UTC
I confirm the fix display back the progress bar in the layer stack. 
Super! Thank you Dmitry!