Fix drawing of progress bars in the layers docker

BUG:407553
BACKPORT:krita/4.2